avoid page breaks in propositions with wkhtmltopdf

--- a/layouts/shortcodes/definition.html
+++ b/layouts/shortcodes/definition.html
@@ -1,4 +1,6 @@
+<div style="page-break-inside: avoid;">
 <div class="panel panel-primary">
 	<div class="panel-heading">Definición</div>
 	<div class="panel-body">{{.Inner}}</div>
+</div>
 </div>
