--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1488,4 +1488,6 @@ pre .copy-to-clipboard:hover {
     color: black !important;
     background: white !important; }
   #body {
-    margin-left: 0px; } }
+    margin-left: 0px; } 
+  .panel, .alert {
+	page-break-inside: avoid;} }
