remove page break changes in theme since Firefox prints reasonably well by default

--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -1488,6 +1488,4 @@ pre .copy-to-clipboard:hover {
     color: black !important;
     background: white !important; }
   #body {
-    margin-left: 0px; } 
-  .panel, .alert {
-	page-break-inside: avoid; } }
+    margin-left: 0px; } }
