--- a/layouts/shortcodes/lemma.html
+++ b/layouts/shortcodes/lemma.html
@@ -1,4 +1,4 @@
 <div class="panel panel-info">
-	<div class="panel-heading">Lemma</div>
+	<div class="panel-heading">Lema</div>
 	<div class="panel-body">{{.Inner}}</div>
 </div>
