--- a/static/css/theme.css
+++ b/static/css/theme.css
@@ -722,7 +722,8 @@ textarea:focus, input[type="email"]:focus, input[type="number"]:focus, input[typ
 #body img, #body .video-container {
   margin: 3rem auto;
   display: block;
-  text-align: center; }
+  text-align: center;
+  max-height: 300px; }
 
 #body img.border, #body .video-container.border {
   border: 2px solid #e6e6e6 !important;
