--- a/layouts/partials/search.html
+++ b/layouts/partials/search.html
@@ -4,8 +4,8 @@
     <span data-search-clear=""><i class="fa fa-close"></i></span>
 </div>
 <script type="text/javascript" src="{{"js/lunr.min.js" | relURL}}"></script>
-<script type="text/javascript" src="{{"js/horsey.js" | relURL}}"></script>
+<script type="text/javascript" src="{{"js/auto-complete.js" | relURL}}"></script>
 <script type="text/javascript">
-    var baseurl = "{{.Site.BaseURL}}";
+    var baseurl = '{{ "" | relURL }}';
 </script>
 <script type="text/javascript" src="{{"js/search.js" | relURL}}"></script>
