add cross reference support for environments

--- a/layouts/shortcodes/definition.html
+++ b/layouts/shortcodes/definition.html
@@ -1,4 +1,4 @@
 <div class="panel panel-primary">
-	<div class="panel-heading">Definición</div>
+	<div class="panel-heading"  id="{{ .Get "label" }}">Definición</div>
 	<div class="panel-body">{{.Inner}}</div>
 </div>
