--- a/layouts/shortcodes/exercise.html
+++ b/layouts/shortcodes/exercise.html
@@ -1,1 +1,1 @@
-<div class="alert alert-danger" role="alert">{{.Inner}}</div>
+<div class="alert alert-danger" role="alert" id="{{ .Get "label" }}">{{.Inner}}</div>
