--- a/layouts/partials/scripts.html
+++ b/layouts/partials/scripts.html
@@ -1,4 +1,9 @@
 <script src="{{"js/clipboard.min.js" | relURL}}"></script>
+<script>
+$( document ).ready(function() {
+  var clipboard = new Clipboard('.clipboard');
+});
+</script>
 <script src="{{"js/featherlight.min.js" | relURL}}"></script>
 <script src="{{"js/html5shiv-printshiv.min.js" | relURL}}"></script>
 <script src="{{"js/highlight.pack.js" | relURL}}"></script>
