--- a/layouts/shortcodes/remark.html
+++ b/layouts/shortcodes/remark.html
@@ -1,1 +1,1 @@
-<div class="alert alert-info" role="alert" id="{{ .Get "label" }}">{{.Inner}}</div>
+<div class="alert alert-info" role="alert"{{ with .Get "label" }} id="{{ . }}"{{ end }}>{{.Inner}}</div>
