--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,5 +1,5 @@
-{{ range where .Site.Pages ".File.BaseFileName" "_header" }}
-	{{ .Content }} 
+{{ range where .Pages ".File.BaseFileName" "_header" }}
+	{{ .Content }}
 {{else}}
 <span style="font-size:smaller">
 	<a id="logo" href="{{.Site.BaseURL}}">
