--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -36,7 +36,7 @@
             {{- range sort . "Weight"}}
                 <li class="" role="">
                     {{- .Pre -}}
-                    <a href="{{.URL}}" target="_blank" rel="noopener">{{safeHTML .Name}}</a>
+                    <a href="{{.RelPermalink}}" target="_blank" rel="noopener">{{safeHTML .Name}}</a>
                     {{- .Post -}}
                 </li>
             {{- end}}
@@ -63,7 +63,7 @@
  {{- with .sect}}
   {{- if and .IsSection (or (not .Params.hidden) $.showhidden)}}
     {{- safeHTML .Params.head}}
-    <li data-nav-id="{{.URL}}" class="dd-item
+    <li data-nav-id="{{.RelPermalink}}" class="dd-item
         {{- if .IsAncestor $currentNode}} parent{{end}}
         {{- if eq .UniqueID $currentNode.UniqueID}} active{{end}}
         {{- if .Params.alwaysopen}} parent{{end -}}
@@ -110,7 +110,7 @@
     </li>
   {{- else}}
     {{- if not .Params.Hidden }}
-      <li data-nav-id="{{.URL}}" class="dd-item
+      <li data-nav-id="{{.RelPermalink}}" class="dd-item
      {{- if eq .UniqueID $currentNode.UniqueID}} active{{end -}}
       ">
         <a href="{{ .RelPermalink}}">
