--- a/layouts/shortcodes/theorem.html
+++ b/layouts/shortcodes/theorem.html
@@ -1,4 +1,4 @@
 <div class="panel panel-success">
-	<div class="panel-heading"{{ with .Get "label" }} id="{{ . }}"{{ end }}>Teorema{{ with .Get "name" }} ({{ htmlUnescape . | markdownify}}){{end}}{{ with .Get "label" }} <span class="clipboard btn-anchor-link tooltipped tooltipped-s" aria-label="{{ . }}" data-clipboard-text="{{ $.Page.URL | absURL }}#{{ . }}"><i class="fa fa-link"></i></span>{{ end }}</div>
+	<div class="panel-heading"{{ with .Get "label" }} id="{{ . }}"{{ end }}>Teorema{{ with .Get "name" }} ({{ htmlUnescape . | markdownify}}){{end}}{{ with .Get "label" }} <span class="clipboard btn-anchor-link tooltipped tooltipped-s" aria-label="{{ . }}" data-clipboard-text="{{ $.Page.RelPermalink | absURL }}#{{ . }}"><i class="fa fa-link"></i></span>{{ end }}</div>
 	<div class="panel-body">{{.Inner}}</div>
 </div>
