--- a/layouts/partials/menu.html
+++ b/layouts/partials/menu.html
@@ -65,7 +65,7 @@
     {{- safeHTML .Params.head}}
     <li data-nav-id="{{.RelPermalink}}" class="dd-item
         {{- if .IsAncestor $currentNode}} parent{{end}}
-        {{- if eq .UniqueID $currentNode.UniqueID}} active{{end}}
+        {{- if eq .File.UniqueID $currentNode.File.UniqueID}} active{{end}}
         {{- if .Params.alwaysopen}} parent{{end -}}
         ">
       <a href="{{ .RelPermalink}}">
@@ -111,7 +111,7 @@
   {{- else}}
     {{- if not .Params.Hidden }}
       <li data-nav-id="{{.RelPermalink}}" class="dd-item
-     {{- if eq .UniqueID $currentNode.UniqueID}} active{{end -}}
+     {{- if eq .File.UniqueID $currentNode.File.UniqueID}} active{{end -}}
       ">
         <a href="{{ .RelPermalink}}">
           <span>{{safeHTML .Params.Pre}}{{.Title}}{{safeHTML .Params.Post}}</span>
