moficiations to render markdown in shortcodes as in previous hugo versions

--- a/layouts/shortcodes/remark.html
+++ b/layouts/shortcodes/remark.html
@@ -1,1 +1,2 @@
+{{ $_hugo_config := `{ "version": 1 }` }}
 <div class="alert alert-info" role="alert"{{ with .Get "label" }} id="{{ . }}"{{ end }}>{{.Inner}}</div>
