--- a/layouts/partials/logo.html
+++ b/layouts/partials/logo.html
@@ -1,10 +1,12 @@
-{{ range where .Pages ".File.BaseFileName" "_header" }}
+{{ if .File }}
+{{ range where .Site.Pages ".File.BaseFileName" "_header" }}
 	{{ .Content }}
-{{else}}
+{{ else }}
 <span style="font-size:smaller">
 	<a id="logo" href="{{.Site.BaseURL}}">
 	  <span class="fa fa-gears" style="font-size:large"></span>
 	</a>
 	{{ T "create-header-md" }}
 </small>
-{{end}}
+{{ end }}
+{{ end }}
