--- a/layouts/shortcodes/definition.html
+++ b/layouts/shortcodes/definition.html
@@ -1,3 +1,4 @@
+{{ $_hugo_config := `{ "version": 1 }` }}
 <div class="panel panel-primary">
 	<div class="panel-heading"{{ with .Get "label" }} id="{{ . }}"{{ end }}>Definición{{ with .Get "label" }} <span class="clipboard btn-anchor-link tooltipped tooltipped-s" aria-label="{{ . }}" data-clipboard-text="{{ $.Page.RelPermalink | absURL }}#{{ . }}"><i class="fa fa-link"></i></span>{{ end }}</div>
 	<div class="panel-body">{{.Inner}}</div>
