--- a/layouts/shortcodes/watch.html
+++ b/layouts/shortcodes/watch.html
@@ -1,1 +1,2 @@
+{{ $_hugo_config := `{ "version": 1 }` }}
 <div class="alert alert-warning" role="alert"{{ with .Get "label" }} id="{{ . }}"{{ end }}>{{.Inner}}</div>
