set again locally all proofs to be hidden by default

--- a/layouts/shortcodes/proof.html
+++ b/layouts/shortcodes/proof.html
@@ -6,7 +6,7 @@
         Prueba
         </span>
     </div>
-    <div class="expand-content" >
+    <div class="expand-content" style="display: none;">
 {{.Inner | safeHTML}}<div align="right"><i class="fa fa-square-o"></i></div> 
     </div>
 </div>
